kubernetes/apps/media/audiobookshelf/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "5825ee88-3939-4e16-ab32-856c6ff7df96.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Audiobookshelf"
    gethomepage.dev/description: "Audiobooks & Podcasts"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "audiobookshelf"
    gethomepage.dev/widget.type: "audiobookshelf"
    gethomepage.dev/widget.url: "https://audio.smadja.dev"
spec:
  rules:
  - host: audiobookshelf.smadja.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 80
